--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  background-color: #f9f9f9;
+  background-color: #38ca83;
   height: 100vh;
   margin: 0;
   padding: 0 30px;
